Navbar + views categorien en Artikels

--- a/Materiaal/Views/Artikels/Create.cshtml
+++ b/Materiaal/Views/Artikels/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Materiaal.Models.Artikel.Artikel
+﻿@model Materiaal.Models.Artikel
 
 @{
     ViewBag.Title = "Create";
@@ -67,6 +67,3 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
