--- a/Materiaal/Views/Artikels/Index.cshtml
+++ b/Materiaal/Views/Artikels/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Materiaal.Models.Artikel.Artikel>
+﻿@model IEnumerable<Materiaal.Models.Artikel>
 
 @{
     ViewBag.Title = "Index";
