--- a/Materiaal/Views/Shared/_Layout.cshtml
+++ b/Materiaal/Views/Shared/_Layout.cshtml
@@ -3,10 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <title>@ViewBag.Title</title>
+    <link href="@Url.Content("favicon.ico")" rel="icon" type="image/x-icon" />
 
+    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -17,28 +19,51 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+                    
+
+                    @* Dropdown voor artikels *@
+                    <li class="dropdown">
+                        <a href="#" dropdown-toggle" data-toggle="dropdown" role="button"
+                           aria-expanded="false">Artikelen</a>
+                        <ul class="dropdown-menu" role="menu" id="myTab">
+                            <li role="presentation">
+                                <a href="@Url.Action("Index", "Artikels")">Overzicht Artikelen</a>
+                            </li>
+                            <li role="presentation">
+                                <a href="@Url.Action("Create", "Artikels")">Nieuw Artikel Aanmaken</a>
+                            </li>
+                        </ul>
+                    </li>
+                    @* Dropdown voor Categoriën *@
+                    <li class="dropdown">
+                        <a href="#" dropdown-toggle" data-toggle="dropdown" role="button"
+                           aria-expanded="false">Artikelen</a>
+                        <ul class="dropdown-menu" role="menu" id="myTab">
+                            <li role="presentation">
+                                <a href="@Url.Action("Index", "Categories")">Overzicht categoriën</a>
+                            </li>
+                            <li role="presentation">
+                                <a href="@Url.Action("Create", "Categories")">Nieuw categorie aanmaken</a>
+                            </li>
+                        </ul>
+                    </li>
             </div>
         </div>
     </div>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Materiaalmeesters</p>
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
