--- a/Materiaal/Views/Artikels/Create.cshtml
+++ b/Materiaal/Views/Artikels/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Materiaal.Models.Artikel
+﻿@model Materiaal.ViewModels.Artikels.ArtikelCreateViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -16,42 +16,44 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.art_Naam, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.artikel.art_Naam, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.art_Naam, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.art_Naam, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.artikel.art_Naam, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.artikel.art_Naam, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.artikel.voorraad, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.artikel.voorraad, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.artikel.voorraad, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.artikel.cat_Id, htmlAttributes: new { @class = "control-label col-md-2" })
+
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.artikel.cat_Id, (SelectList)ViewBag.CategorySelect, "Kies een categorie", new { @class = "btn btn-default dropdown-toggle", style = "width:300px;" })
+                @Html.ValidationMessageFor(model => model.artikel.cat_Id, "", new { @class = "text-danger" })
+
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.voorraad, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.artikel.prijs, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.voorraad, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.voorraad, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.artikel.prijs, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.artikel.prijs, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.cat_Id, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.artikel.Leverancier, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.cat_Id, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.cat_Id, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.prijs, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.prijs, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.prijs, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Leverancier, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Leverancier, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Leverancier, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.artikel.Leverancier, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.artikel.Leverancier, "", new { @class = "text-danger" })
             </div>
         </div>
 
