--- a/Materiaal/Views/Artikels/Details.cshtml
+++ b/Materiaal/Views/Artikels/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Materiaal.Models.Artikel
+﻿@model Materiaal.ViewModels.Artikels.ArtikelDetailViewModel
 
 @{
     ViewBag.Title = "Details";
@@ -11,48 +11,48 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.art_Naam)
+            @Html.DisplayNameFor(model => model.artikel.art_Naam)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.art_Naam)
+            @Html.DisplayFor(model => model.artikel.art_Naam)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.voorraad)
+            @Html.DisplayNameFor(model => model.artikel.voorraad)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.voorraad)
+            @Html.DisplayFor(model => model.artikel.voorraad)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.cat_Id)
+            @Html.DisplayNameFor(model => model.categorie.cat_Naam)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.cat_Id)
+            @Html.DisplayFor(model => model.categorie.cat_Naam)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.prijs)
+            @Html.DisplayNameFor(model => model.artikel.prijs)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.prijs)
+            @Html.DisplayFor(model => model.artikel.prijs)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Leverancier)
+            @Html.DisplayNameFor(model => model.artikel.Leverancier)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Leverancier)
+            @Html.DisplayFor(model => model.artikel.Leverancier)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.art_Id }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.artikel.art_Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
