--- a/Materiaal/Views/Artikels/Index.cshtml
+++ b/Materiaal/Views/Artikels/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Materiaal.Models.Artikel>
+﻿@model IEnumerable<Materiaal.ViewModels.Artikels.ArtikelIndexViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -12,19 +12,19 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.art_Naam)
+            @Html.DisplayNameFor(model => model.artikel.art_Naam)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.voorraad)
+            @Html.DisplayNameFor(model => model.artikel.voorraad)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.cat_Id)
+            @Html.DisplayNameFor(model => model.categorie.cat_Naam)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.prijs)
+            @Html.DisplayNameFor(model => model.artikel.prijs)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Leverancier)
+            @Html.DisplayNameFor(model => model.artikel.Leverancier)
         </th>
         <th></th>
     </tr>
@@ -32,24 +32,24 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.art_Naam)
+            @Html.DisplayFor(modelItem => item.artikel.art_Naam)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.voorraad)
+            @Html.DisplayFor(modelItem => item.artikel.voorraad)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.cat_Id)
+            @Html.DisplayFor(modelItem => item.categorie.cat_Naam)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.prijs)
+            @Html.DisplayFor(modelItem => item.artikel.prijs)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Leverancier)
+            @Html.DisplayFor(modelItem => item.artikel.Leverancier)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.art_Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.art_Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.art_Id })
+            @Html.ActionLink("Edit", "Edit", new { id=item.artikel.art_Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.artikel.art_Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.artikel.art_Id })
         </td>
     </tr>
 }
