--- a/Materiaal/Views/Shared/_Layout.cshtml
+++ b/Materiaal/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                     @* Dropdown voor Categoriën *@
                     <li class="dropdown">
                         <a href="#" dropdown-toggle" data-toggle="dropdown" role="button"
-                           aria-expanded="false">Artikelen</a>
+                           aria-expanded="false">Categoriën</a>
                         <ul class="dropdown-menu" role="menu" id="myTab">
                             <li role="presentation">
                                 <a href="@Url.Action("Index", "Categories")">Overzicht categoriën</a>
