--- a/Materiaal/Views/Artikels/Details.cshtml
+++ b/Materiaal/Views/Artikels/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Materiaal.ViewModels.Artikels.ArtikelDetailViewModel
+﻿@model Materiaal.Models.Artikel
 
 @{
     ViewBag.Title = "Details";
@@ -10,49 +10,49 @@
     <h4>Artikel</h4>
     <hr />
     <dl class="dl-horizontal">
+  
+
         <dt>
-            @Html.DisplayNameFor(model => model.artikel.art_Naam)
+            @Html.DisplayNameFor(model => model.art_Naam)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.artikel.art_Naam)
+            @Html.DisplayFor(model => model.art_Naam)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Categorie.cat_Naam)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Categorie.cat_Naam)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.voorraad)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.voorraad)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.artikel.voorraad)
+            @Html.DisplayNameFor(model => model.prijs)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.artikel.voorraad)
+            @Html.DisplayFor(model => model.prijs)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.categorie.cat_Naam)
+            @Html.DisplayNameFor(model => model.Leverancier)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.categorie.cat_Naam)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.artikel.prijs)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.artikel.prijs)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.artikel.Leverancier)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.artikel.Leverancier)
+            @Html.DisplayFor(model => model.Leverancier)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.artikel.art_Id }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.art_Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
