--- a/Materiaal/Views/Artikels/Index.cshtml
+++ b/Materiaal/Views/Artikels/Index.cshtml
@@ -4,11 +4,13 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Artikeloverzicht</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<div style="margin-bottom: 5px;">
+    <a href="@Url.Action("Create", "Artikels")" class="btn btn-info">
+        Nieuw artikel aanmaken
+    </a>
+</div>
 <table class="table">
     <tr>
         <th>
@@ -26,7 +28,10 @@
         <th>
             @Html.DisplayNameFor(model => model.artikel.Leverancier)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayNameFor(model => model.artikel.actief)
+ 
+        </th>
     </tr>
 
 @foreach (var item in Model) {
@@ -47,9 +52,19 @@
             @Html.DisplayFor(modelItem => item.artikel.Leverancier)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.artikel.art_Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.artikel.art_Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.artikel.art_Id })
+            @Html.DisplayFor(modelItem => item.artikel.actief)
+        </td>
+        <td>
+            <abbr title="Artikel aanpassen">
+                <a href="@Url.Action("Edit", "Artikels", new { id = item.artikel.art_Id})" class="btn btn-primary toggle-more-detail">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </a>
+            </abbr>
+            <abbr title="Artikel verwijderen">
+                <a href="@Url.Action("Delete", "Artikels", new { id = item.artikel.art_Id })" class="btn btn-danger toggle-more-detail">
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </a>
+            </abbr>
         </td>
     </tr>
 }
