Vertalingen + kleine wijzigingen tak

--- a/Materiaal/Views/Shared/_Layout.cshtml
+++ b/Materiaal/Views/Shared/_Layout.cshtml
@@ -51,6 +51,17 @@
                             </li>
                         </ul>
                     </li>
+                    @* Dropdown voor Tak *@
+                    <li class="dropdown">
+                        <a href="#" dropdown-toggle" data-toggle="dropdown" role="button"
+                           aria-expanded="false">Takken</a>
+                        <ul class="dropdown-menu" role="menu" id="myTab">
+                            <li role="presentation">
+                                <a href="@Url.Action("Index", "Taks")">Overzicht Takken</a>
+                            </li>
+                          
+                        </ul>
+                    </li>
             </div>
         </div>
     </div>
