--- a/Materiaal/Views/Taks/Edit.cshtml
+++ b/Materiaal/Views/Taks/Edit.cshtml
@@ -1,10 +1,8 @@
 ﻿@model Materiaal.Models.Aanvraag.Tak
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Takken";
 }
-
-<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
@@ -27,16 +25,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Opslaan" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug naar overzicht", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
