--- a/Materiaal/Views/Taks/Delete.cshtml
+++ b/Materiaal/Views/Taks/Delete.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Materiaal.Models.Aanvraag.Tak
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Takken";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
 <div>
     <h4>Tak</h4>
     <hr />
@@ -25,8 +24,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Verwijder" class="btn btn-default" /> |
+            @Html.ActionLink("Terug naar overzicht", "Index")
         </div>
     }
 </div>
